- Garbage Collection (in progress)

--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -80,6 +80,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analysis\LiveAnalysisRegisterAllocatorEnvironment - Copy.cs" />
+    <Compile Include="Analysis\LiveAnalysisGCEnvironment.cs" />
+    <Compile Include="Analysis\BaseLiveAnalysisEnvironment.cs" />
     <Compile Include="Analysis\SparseConditionalConstantPropagation.cs" />
     <Compile Include="Analysis\NaturalBlockOrder.cs" />
     <Compile Include="Analysis\ProtectedRegion.cs" />
@@ -214,6 +217,7 @@
     <Compile Include="Stages\DevirtualizeCallStage.cs" />
     <Compile Include="Stages\CallStage.cs" />
     <Compile Include="Stages\LowerIRStage.cs" />
+    <Compile Include="Analysis\LiveAnalysis.cs" />
     <Compile Include="Stages\PreciseGCStage.cs" />
     <Compile Include="Stages\GraphVizStage.cs" />
     <Compile Include="Stages\ExceptionPrologueStage.cs" />
