- Refactoring + bug fixes + work on GC

--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -92,7 +92,7 @@
     <Compile Include="Analysis\ReverseBlockOrder.cs" />
     <Compile Include="Analysis\SimpleTraceBlockOrder.cs" />
     <Compile Include="Analysis\Dominance.cs" />
-    <Compile Include="Analysis\IDominanceAnalysis.cs" />
+    <Compile Include="Analysis\BaseDominanceAnalysis.cs" />
     <Compile Include="CompilerTypeData.cs" />
     <Compile Include="CompilerMethodData.cs" />
     <Compile Include="CompilerData.cs" />
