--- a/Source/Mosa.Tool.Launcher/packages.config
+++ b/Source/Mosa.Tool.Launcher/packages.config
@@ -2,4 +2,17 @@
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net46" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Console" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
 </packages>
