- Working on device driver system

--- a/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
+++ b/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
@@ -97,7 +97,7 @@
     <Compile Include="IHardwareAbstraction.cs" />
     <Compile Include="IHardwareDevice.cs" />
     <Compile Include="IIOPorts.cs" />
-    <Compile Include="IMemory.cs" />
+    <Compile Include="BaseMemory.cs" />
     <Compile Include="InterruptHandler.cs" />
     <Compile Include="InterruptManager.cs" />
     <Compile Include="IOPortRegion.cs" />
