- Working on device driver system

--- a/Source/Mosa.CoolWorld.x86/Mosa.CoolWorld.x86.csproj
+++ b/Source/Mosa.CoolWorld.x86/Mosa.CoolWorld.x86.csproj
@@ -85,7 +85,6 @@
   <ItemGroup>
     <Compile Include="HAL\Hardware.cs" />
     <Compile Include="HAL\IOPort.cs" />
-    <Compile Include="HAL\Memory.cs" />
     <Compile Include="Mosa.Application\Credits.cs" />
     <Compile Include="Mosa.Application\Mem.cs" />
     <Compile Include="Mosa.AppSystem\AppOutputStream.cs" />
@@ -118,13 +117,13 @@
       <Project>{d89972fd-a930-4d0c-b393-1895e78fafab}</Project>
       <Name>Mosa.FileSystem</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mosa.HardwareSystem\Mosa.HardwareSystem.csproj">
-      <Project>{4dbd4c50-bec5-48d9-b471-9fb0c7f69999}</Project>
-      <Name>Mosa.HardwareSystem</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Mosa.Kernel.x86\Mosa.Kernel.x86.csproj">
       <Project>{FF099D48-3FA5-4ED6-BBA0-1497D734962A}</Project>
       <Name>Mosa.Kernel.x86</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mosa.Kernel\Mosa.Kernel.csproj">
+      <Project>{ff099d48-3fa5-4ed6-bba0-1497d994962a}</Project>
+      <Name>Mosa.Kernel</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
       <Project>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</Project>
