- Working on device driver system

--- a/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
+++ b/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="IDTStack.cs" />
+    <Compile Include="IOPort.cs" />
     <Compile Include="LZF.cs" />
     <Compile Include="UnitTestQueue.cs" />
     <Compile Include="UnitTestRunner.cs" />
