- Working on device driver system

--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Intrinsics\CreateInstanceSimple.cs" />
     <Compile Include="Intrinsics\GetAssemblyListTable.cs" />
     <Compile Include="Intrinsics\GetObjectFromAddress.cs" />
+    <Compile Include="LoadStore.cs" />
     <Compile Include="Intrinsics\Load16.cs" />
     <Compile Include="Intrinsics\Store64.cs" />
     <Compile Include="Intrinsics\Store8.cs" />
