--- a/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
+++ b/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
@@ -81,6 +81,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISA\CMOSX.cs" />
+    <Compile Include="ISA\IDEControllerX.cs" />
+    <Compile Include="ISA\PCIControllerX.cs" />
     <Compile Include="ScanCodeMap\HU.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="ISA\CMOS.cs">
