--- a/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
+++ b/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
@@ -81,21 +81,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISA\CMOSX.cs" />
-    <Compile Include="ISA\IDEControllerX.cs" />
-    <Compile Include="ISA\PCIControllerX.cs" />
-    <Compile Include="ISA\StandardKeyboardX.cs" />
+    <Compile Include="ISA\CMOS.cs" />
+    <Compile Include="ISA\IDEController.cs" />
+    <Compile Include="ISA\PCIController.cs" />
+    <Compile Include="ISA\StandardKeyboard.cs" />
     <Compile Include="ScanCodeMap\HU.cs" />
     <Compile Include="Setup.cs" />
-    <Compile Include="ISA\CMOS.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ISA\IDEController.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ISA\PCIController.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="ISA\PIC.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -103,9 +94,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ISA\Serial.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ISA\StandardKeyboard.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ISA\VGAText.cs">
@@ -119,7 +107,6 @@
     <Compile Include="PCI\Intel\QuarkSoC\IntelHSUART.cs" />
     <Compile Include="PCI\AMD\AMDPCNetII.cs" />
     <Compile Include="PCI\Intel\QuarkSoC\IntelGPIOController.cs" />
-    <Compile Include="PCI\MassStorage\PCIIDEController.cs" />
     <Compile Include="PCI\VideoCard\GenericVGA.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -133,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="PCI\MassStorage\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
   <PropertyGroup>
