- New comparison optimization + updated packages

--- a/Source/Mosa.UnitTest.Collection/Mosa.UnitTest.Collection.csproj
+++ b/Source/Mosa.UnitTest.Collection/Mosa.UnitTest.Collection.csproj
@@ -60,6 +60,7 @@
       <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="CharTests.cs" />
+    <Compile Include="CompilerTests.cs" />
     <Compile Include="ConvI2Tests.cs" />
     <Compile Include="ConvI1Tests.cs" />
     <Compile Include="ConvI4Tests.cs" />
