--- a/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
+++ b/Source/Mosa.DeviceDriver/Mosa.DeviceDriver.csproj
@@ -90,27 +90,6 @@
     <Compile Include="ISA\PIC.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ISA\PIT.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ISA\Serial.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ISA\VGAText.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="PCI\Intel\Intel82541EI.cs" />
-    <Compile Include="PCI\Intel\Intel82540EM.cs" />
-    <Compile Include="PCI\Intel\IntelPIIX4.cs" />
-    <Compile Include="PCI\Intel\IntelPIIX3.cs" />
-    <Compile Include="PCI\Intel\Intel440FX.cs" />
-    <Compile Include="PCI\Intel\QuarkSoC\IntelHSUART.cs" />
-    <Compile Include="PCI\AMD\AMDPCNetII.cs" />
-    <Compile Include="PCI\Intel\QuarkSoC\IntelGPIOController.cs" />
-    <Compile Include="PCI\VideoCard\GenericVGA.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="PCI\S3\S3Trio64V2.cs" />
     <Compile Include="PCI\VMware\VMwareSVGAII.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -122,7 +101,11 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="PCI\AMD\" />
+    <Folder Include="PCI\Intel\QuarkSoC\" />
     <Folder Include="PCI\MassStorage\" />
+    <Folder Include="PCI\S3\" />
+    <Folder Include="PCI\VideoCard\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
   <PropertyGroup>
