--- a/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
+++ b/Source/Mosa.UnitTest.Collection.xUnit/Mosa.UnitTest.Collection.xUnit.csproj
@@ -108,6 +108,7 @@
     <Compile Include="GenericMethodFixture.cs" />
     <Compile Include="GenericInterfaceFixture.cs" />
     <Compile Include="GenericCallFixture.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Int16Fixture.cs" />
     <Compile Include="Int32Fixture.cs" />
     <Compile Include="Int64Fixture.cs" />
