- Moving toward dynamic code generation for instructions, optimizations, etc.

--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -752,9 +752,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="IR\DynamicJsonConverter.ttinclude" />
-    <None Include="IR\IRInstruction.json" />
-    <None Include="IR\MultipleOutputHelper.ttinclude" />
+    <None Include="IR\IRInstructions.json" />
     <None Include="Mosa.Compiler.Framework.nuspec" />
   </ItemGroup>
   <ItemGroup>
