--- a/Source/Mosa.Workspace.Experiment.Debug/Mosa.Workspace.Experiment.Debug.csproj
+++ b/Source/Mosa.Workspace.Experiment.Debug/Mosa.Workspace.Experiment.Debug.csproj
@@ -53,6 +53,10 @@
       <Project>{75a12a8a-8c8f-4d1e-801b-689d8f781bf4}</Project>
       <Name>Mosa.Compiler.Framework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mosa.Platform.x86\Mosa.Platform.x86.csproj">
+      <Project>{DE30CBE9-50F3-4A3E-BCC9-A8A36348530E}</Project>
+      <Name>Mosa.Platform.x86</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
