- Moving toward rule based/dynamic code generation for instructions, optimizations, etc.

--- a/Source/Mosa.Compiler.MosaTypeSystem/Mosa.Compiler.MosaTypeSystem.csproj
+++ b/Source/Mosa.Compiler.MosaTypeSystem/Mosa.Compiler.MosaTypeSystem.csproj
@@ -79,6 +79,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuiltInType.cs" />
     <Compile Include="GenericArgumentResolver.cs" />
     <Compile Include="IMetadata.cs" />
     <Compile Include="IModuleLoader.cs" />
